--- a/environments/py-3.10-win-64-dev.conda.lock.yml
+++ b/environments/py-3.10-win-64-dev.conda.lock.yml
@@ -8,19 +8,19 @@ channels:
 dependencies:
   - accessible-pygments=0.0.5=pyhd8ed1ab_0
   - alabaster=0.7.16=pyhd8ed1ab_0
-  - annotated-types=0.7.0=pyhd8ed1ab_0
+  - annotated-types=0.7.0=pyhd8ed1ab_1
   - anyio=4.6.2.post1=pyhd8ed1ab_0
-  - argon2-cffi=23.1.0=pyhd8ed1ab_0
+  - argon2-cffi=23.1.0=pyhd8ed1ab_1
   - argon2-cffi-bindings=21.2.0=py310ha8f682b_5
   - arrow=1.3.0=pyhd8ed1ab_0
   - asciitree=0.3.3=py_2
   - astroid=3.3.5=py310h5588dad_0
-  - asttokens=2.4.1=pyhd8ed1ab_0
+  - asttokens=3.0.0=pyhd8ed1ab_1
   - async-lru=2.0.4=pyhd8ed1ab_0
   - attrs=24.2.0=pyh71513ae_0
-  - babel=2.16.0=pyhd8ed1ab_0
-  - beautifulsoup4=4.12.3=pyha770c72_0
-  - bleach=6.2.0=pyhd8ed1ab_0
+  - babel=2.16.0=pyhd8ed1ab_1
+  - beautifulsoup4=4.12.3=pyha770c72_1
+  - bleach=6.2.0=pyhd8ed1ab_1
   - brotli=1.1.0=h2466b09_2
   - brotli-bin=1.1.0=h2466b09_2
   - brotli-python=1.1.0=py310h9e98ed7_2
@@ -30,75 +30,75 @@ dependencies:
   - cached_property=1.5.2=pyha770c72_1
   - certifi=2024.8.30=pyhd8ed1ab_0
   - cffi=1.17.1=py310ha8f682b_0
-  - charset-normalizer=3.4.0=pyhd8ed1ab_0
-  - click=8.1.7=win_pyh7428d3b_0
+  - charset-normalizer=3.4.0=pyhd8ed1ab_1
+  - click=8.1.7=win_pyh7428d3b_1
   - cloudpickle=3.1.0=pyhd8ed1ab_1
-  - colorama=0.4.6=pyhd8ed1ab_0
-  - comm=0.2.2=pyhd8ed1ab_0
+  - colorama=0.4.6=pyhd8ed1ab_1
+  - comm=0.2.2=pyhd8ed1ab_1
   - contourpy=1.3.1=py310hc19bc0b_0
   - coverage=7.6.8=py310h38315fa_0
-  - cpython=3.10.15=py310hd8ed1ab_2
-  - cycler=0.12.1=pyhd8ed1ab_0
+  - cpython=3.10.16=py310hd8ed1ab_1
+  - cycler=0.12.1=pyhd8ed1ab_1
   - cytoolz=1.0.0=py310ha8f682b_1
   - dask-core=2024.6.2=pyhd8ed1ab_0
   - dataclasses=0.8=pyhc8e2a94_3
   - debugpy=1.8.9=py310h9e98ed7_0
-  - decorator=5.1.1=pyhd8ed1ab_0
+  - decorator=5.1.1=pyhd8ed1ab_1
   - defusedxml=0.7.1=pyhd8ed1ab_0
-  - dill=0.3.9=pyhd8ed1ab_0
+  - dill=0.3.9=pyhd8ed1ab_1
   - discretize=0.10.0=py310h4856b71_1
   - distributed=2024.6.2=pyhd8ed1ab_0
   - docutils=0.19=py310h5588dad_1
   - empymod=2.2.2=pyhd8ed1ab_0
-  - entrypoints=0.4=pyhd8ed1ab_0
-  - exceptiongroup=1.2.2=pyhd8ed1ab_0
+  - entrypoints=0.4=pyhd8ed1ab_1
+  - exceptiongroup=1.2.2=pyhd8ed1ab_1
   - executing=2.1.0=pyhd8ed1ab_0
   - fasteners=0.17.3=pyhd8ed1ab_0
-  - fonttools=4.55.0=py310h38315fa_0
-  - fqdn=1.5.1=pyhd8ed1ab_0
+  - fonttools=4.55.1=py310h38315fa_0
+  - fqdn=1.5.1=pyhd8ed1ab_1
   - freetype=2.12.1=hdaf720e_2
   - fsspec=2022.11.0=pyhd8ed1ab_0
   - geoana=0.5.0=py310h4856b71_4
   - greenlet=3.1.1=py310h9e98ed7_0
-  - h11=0.14.0=pyhd8ed1ab_0
-  - h2=4.1.0=pyhd8ed1ab_0
+  - h11=0.14.0=pyhd8ed1ab_1
+  - h2=4.1.0=pyhd8ed1ab_1
   - h5py=3.12.1=nompi_py310h2b0be38_102
-  - hdf5=1.14.3=nompi_h2b43c12_105
-  - hpack=4.0.0=pyh9f0ad1d_0
+  - hdf5=1.14.3=nompi_hd5d9e70_107
+  - hpack=4.0.0=pyhd8ed1ab_1
   - httpcore=1.0.7=pyh29332c3_1
-  - httpx=0.27.2=pyhd8ed1ab_0
-  - hyperframe=6.0.1=pyhd8ed1ab_0
-  - idna=3.10=pyhd8ed1ab_0
+  - httpx=0.28.0=pyhd8ed1ab_1
+  - hyperframe=6.0.1=pyhd8ed1ab_1
+  - idna=3.10=pyhd8ed1ab_1
   - imagesize=1.4.1=pyhd8ed1ab_0
-  - importlib-metadata=8.5.0=pyha770c72_0
-  - importlib_metadata=8.5.0=hd8ed1ab_0
-  - importlib_resources=6.4.5=pyhd8ed1ab_0
-  - iniconfig=2.0.0=pyhd8ed1ab_0
+  - importlib-metadata=8.5.0=pyha770c72_1
+  - importlib_metadata=8.5.0=hd8ed1ab_1
+  - importlib_resources=6.4.5=pyhd8ed1ab_1
+  - iniconfig=2.0.0=pyhd8ed1ab_1
   - intel-openmp=2023.2.0=h57928b3_50497
   - ipykernel=6.29.5=pyh4bbf305_0
-  - ipython=8.29.0=pyh7428d3b_0
-  - ipython_genutils=0.2.0=pyhd8ed1ab_1
+  - ipython=8.30.0=pyh7428d3b_0
+  - ipython_genutils=0.2.0=pyhd8ed1ab_2
   - ipywidgets=7.8.5=pyhd8ed1ab_0
-  - isoduration=20.11.0=pyhd8ed1ab_0
-  - isort=5.13.2=pyhd8ed1ab_0
-  - jedi=0.19.2=pyhff2d567_0
-  - jinja2=3.1.4=pyhd8ed1ab_0
+  - isoduration=20.11.0=pyhd8ed1ab_1
+  - isort=5.13.2=pyhd8ed1ab_1
+  - jedi=0.19.2=pyhd8ed1ab_1
+  - jinja2=3.1.4=pyhd8ed1ab_1
   - joblib=1.4.2=pyhd8ed1ab_0
-  - json5=0.10.0=pyhd8ed1ab_0
+  - json5=0.10.0=pyhd8ed1ab_1
   - jsonpointer=3.0.0=py310h5588dad_1
-  - jsonschema=4.23.0=pyhd8ed1ab_0
-  - jsonschema-specifications=2024.10.1=pyhd8ed1ab_0
-  - jsonschema-with-format-nongpl=4.23.0=hd8ed1ab_0
+  - jsonschema=4.23.0=pyhd8ed1ab_1
+  - jsonschema-specifications=2024.10.1=pyhd8ed1ab_1
+  - jsonschema-with-format-nongpl=4.23.0=hd8ed1ab_1
   - jupyter-book=1.0.3=pyhd8ed1ab_0
   - jupyter-cache=1.0.1=pyhff2d567_0
-  - jupyter-lsp=2.2.5=pyhd8ed1ab_0
-  - jupyter_client=8.6.3=pyhd8ed1ab_0
+  - jupyter-lsp=2.2.5=pyhd8ed1ab_1
+  - jupyter_client=8.6.3=pyhd8ed1ab_1
   - jupyter_core=5.7.2=pyh5737063_1
-  - jupyter_events=0.10.0=pyhd8ed1ab_0
-  - jupyter_server=2.14.2=pyhd8ed1ab_0
-  - jupyter_server_terminals=0.5.3=pyhd8ed1ab_0
-  - jupyterlab=4.2.6=pyhff2d567_0
-  - jupyterlab_pygments=0.3.0=pyhd8ed1ab_1
+  - jupyter_events=0.10.0=pyhd8ed1ab_1
+  - jupyter_server=2.14.2=pyhd8ed1ab_1
+  - jupyter_server_terminals=0.5.3=pyhd8ed1ab_1
+  - jupyterlab=4.3.2=pyhd8ed1ab_0
+  - jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
   - jupyterlab_server=2.27.3=pyhd8ed1ab_0
   - jupyterlab_widgets=1.1.11=pyhd8ed1ab_0
   - jupytext=1.16.4=pyh80e38bb_0
@@ -121,14 +121,15 @@ dependencies:
   - libiconv=1.17=hcfcfb64_2
   - libjpeg-turbo=3.0.0=hcfcfb64_1
   - liblapack=3.9.0=20_win64_mkl
+  - liblzma=5.6.3=h2466b09_1
   - libpng=1.6.44=h3ca93ac_0
   - libsodium=1.0.20=hc70643c_0
   - libsqlite=3.47.0=h2466b09_1
   - libssh2=1.11.1=he619c9f_0
-  - libtiff=4.7.0=hfc51747_1
+  - libtiff=4.7.0=hdefb170_2
   - libwebp-base=1.4.0=hcfcfb64_0
   - libxcb=1.16=h013a479_1
-  - libxml2=2.13.5=h442d1da_0
+  - libxml2=2.13.5=he286e8c_1
   - libzlib=1.3.1=h2466b09_2
   - linkify-it-py=2.0.3=pyhd8ed1ab_0
   - llvmlite=0.43.0=py310h0288bfe_1
@@ -139,69 +140,69 @@ dependencies:
   - m2w64-gmp=6.1.0=2
   - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
   - markdown-it-py=2.2.0=pyhd8ed1ab_0
-  - markupsafe=3.0.2=py310h38315fa_0
+  - markupsafe=3.0.2=py310h38315fa_1
   - matplotlib-base=3.8.4=py310hadb10a8_2
-  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
-  - mccabe=0.7.0=pyhd8ed1ab_0
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_1
+  - mccabe=0.7.0=pyhd8ed1ab_1
   - mdit-py-plugins=0.4.2=pyhd8ed1ab_0
-  - mdurl=0.1.2=pyhd8ed1ab_0
-  - mistune=3.0.2=pyhd8ed1ab_0
+  - mdurl=0.1.2=pyhd8ed1ab_1
+  - mistune=3.0.2=pyhd8ed1ab_1
   - mkl=2023.2.0=h6a75c08_50497
   - msgpack-python=1.1.0=py310hc19bc0b_0
   - msys2-conda-epoch=20160418=1
   - munkres=1.1.4=pyh9f0ad1d_0
   - myst-nb=1.1.2=pyhd8ed1ab_0
   - myst-parser=1.0.0=pyhd8ed1ab_0
-  - nbclient=0.10.0=pyhd8ed1ab_0
-  - nbconvert=7.16.4=hd8ed1ab_1
-  - nbconvert-core=7.16.4=pyhd8ed1ab_1
-  - nbconvert-pandoc=7.16.4=hd8ed1ab_1
-  - nbformat=5.10.4=pyhd8ed1ab_0
-  - nest-asyncio=1.6.0=pyhd8ed1ab_0
-  - notebook=7.2.2=pyhd8ed1ab_0
-  - notebook-shim=0.2.4=pyhd8ed1ab_0
+  - nbclient=0.10.1=pyhd8ed1ab_0
+  - nbconvert=7.16.4=hd8ed1ab_2
+  - nbconvert-core=7.16.4=pyhff2d567_2
+  - nbconvert-pandoc=7.16.4=hd8ed1ab_2
+  - nbformat=5.10.4=pyhd8ed1ab_1
+  - nest-asyncio=1.6.0=pyhd8ed1ab_1
+  - notebook=7.3.1=pyhd8ed1ab_0
+  - notebook-shim=0.2.4=pyhd8ed1ab_1
   - numba=0.60.0=py310h7793332_0
   - numcodecs=0.13.1=py310hb4db72f_0
   - numpy=1.26.4=py310hf667824_0
   - openjpeg=2.5.2=h3d672ee_0
   - openssl=3.4.0=h2466b09_0
   - overrides=7.7.0=pyhd8ed1ab_0
-  - packaging=24.2=pyhff2d567_1
+  - packaging=24.2=pyhd8ed1ab_2
   - pandas=2.2.3=py310hb4db72f_1
   - pandoc=3.5=h57928b3_0
   - pandocfilters=1.5.0=pyhd8ed1ab_0
-  - parso=0.8.4=pyhd8ed1ab_0
+  - parso=0.8.4=pyhd8ed1ab_1
   - partd=1.4.2=pyhd8ed1ab_0
-  - pickleshare=0.7.5=py_1003
+  - pickleshare=0.7.5=pyhd8ed1ab_1004
   - pillow=10.3.0=py310h3e38d90_1
   - pip=24.3.1=pyh8b19718_0
-  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
-  - platformdirs=4.3.6=pyhd8ed1ab_0
-  - pluggy=1.5.0=pyhd8ed1ab_0
-  - prometheus_client=0.21.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.48=pyha770c72_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
+  - platformdirs=4.3.6=pyhd8ed1ab_1
+  - pluggy=1.5.0=pyhd8ed1ab_1
+  - prometheus_client=0.21.1=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.48=pyha770c72_1
   - psutil=6.1.0=py310ha8f682b_0
   - pthread-stubs=0.4=hcd874cb_1001
   - pthreads-win32=2.9.1=h2466b09_4
   - pure_eval=0.2.3=pyhd8ed1ab_0
   - pybtex=0.24.0=pyhd8ed1ab_2
   - pybtex-docutils=1.0.3=py310h5588dad_2
-  - pycparser=2.22=pyhd8ed1ab_0
-  - pydantic=2.10.2=pyh3cfb1c2_0
+  - pycparser=2.22=pyh29332c3_1
+  - pydantic=2.10.3=pyh3cfb1c2_0
   - pydantic-core=2.27.1=py310hc226416_0
   - pydata-sphinx-theme=0.15.4=pyhd8ed1ab_0
   - pydiso=0.1.2=py310h5da8fee_0
-  - pygments=2.18.0=pyhd8ed1ab_0
-  - pylint=3.3.1=pyhd8ed1ab_0
+  - pygments=2.18.0=pyhd8ed1ab_1
+  - pylint=3.3.2=pyhd8ed1ab_1
   - pymatsolver=0.2.0=ha770c72_3
   - pymatsolver-base=0.2.0=pyh44b312d_3
-  - pyparsing=3.2.0=pyhd8ed1ab_1
-  - pysocks=1.7.1=pyh0701188_6
-  - pytest=8.3.3=pyhd8ed1ab_0
-  - pytest-cov=6.0.0=pyhd8ed1ab_0
-  - python=3.10.15=hfaddaf0_2_cpython
-  - python-dateutil=2.9.0.post0=pyhff2d567_0
-  - python-fastjsonschema=2.21.0=pyhd8ed1ab_0
+  - pyparsing=3.2.0=pyhd8ed1ab_2
+  - pysocks=1.7.1=pyh09c184e_7
+  - pytest=8.3.4=pyhd8ed1ab_1
+  - pytest-cov=6.0.0=pyhd8ed1ab_1
+  - python=3.10.16=h37870fc_1_cpython
+  - python-dateutil=2.9.0.post0=pyhff2d567_1
+  - python-fastjsonschema=2.21.1=pyhd8ed1ab_0
   - python-json-logger=2.0.7=pyhd8ed1ab_0
   - python-tzdata=2023.4=pyhd8ed1ab_0
   - python_abi=3.10=5_cp310
@@ -211,17 +212,17 @@ dependencies:
   - pyyaml=6.0.2=py310ha8f682b_1
   - pyzmq=26.2.0=py310h656833d_3
   - readthedocs-sphinx-ext=2.2.5=pyhd8ed1ab_0
-  - referencing=0.35.1=pyhd8ed1ab_0
-  - requests=2.32.3=pyhd8ed1ab_0
+  - referencing=0.35.1=pyhd8ed1ab_1
+  - requests=2.32.3=pyhd8ed1ab_1
   - rfc3339-validator=0.1.4=pyhd8ed1ab_0
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
-  - rpds-py=0.21.0=py310hc226416_0
+  - rpds-py=0.22.3=py310hc226416_0
   - scikit-learn=1.4.2=py310hf2a6c47_1
   - scipy=1.14.1=py310hbd0dde3_1
-  - send2trash=1.8.3=pyh5737063_0
+  - send2trash=1.8.3=pyh5737063_1
   - setuptools=75.6.0=pyhff2d567_1
-  - six=1.16.0=pyh6c4a22f_0
-  - sniffio=1.3.1=pyhd8ed1ab_0
+  - six=1.17.0=pyhd8ed1ab_0
+  - sniffio=1.3.1=pyhd8ed1ab_1
   - snowballstemmer=2.2.0=pyhd8ed1ab_0
   - sortedcontainers=2.4.0=pyhd8ed1ab_0
   - soupsieve=2.5=pyhd8ed1ab_1
@@ -252,48 +253,47 @@ dependencies:
   - tinycss2=1.4.0=pyhd8ed1ab_0
   - tk=8.6.13=h5226925_1
   - toml=0.10.2=pyhd8ed1ab_0
-  - tomli=2.1.0=pyhff2d567_0
-  - tomlkit=0.13.2=pyha770c72_0
+  - tomli=2.2.1=pyhd8ed1ab_1
+  - tomlkit=0.13.2=pyha770c72_1
   - toolz=1.0.0=pyhd8ed1ab_0
   - tornado=6.4.2=py310ha8f682b_0
   - tqdm=4.67.1=pyhd8ed1ab_0
-  - traitlets=5.14.3=pyhd8ed1ab_0
-  - types-python-dateutil=2.9.0.20241003=pyhff2d567_0
-  - typing-extensions=4.12.2=hd8ed1ab_0
-  - typing_extensions=4.12.2=pyha770c72_0
-  - typing_utils=0.1.0=pyhd8ed1ab_0
+  - traitlets=5.14.3=pyhd8ed1ab_1
+  - types-python-dateutil=2.9.0.20241003=pyhd8ed1ab_1
+  - typing-extensions=4.12.2=hd8ed1ab_1
+  - typing_extensions=4.12.2=pyha770c72_1
+  - typing_utils=0.1.0=pyhd8ed1ab_1
   - tzdata=2024b=hc8b5060_0
   - uc-micro-py=1.0.3=pyhd8ed1ab_0
   - ucrt=10.0.22621.0=h57928b3_1
   - unicodedata2=15.1.0=py310ha8f682b_1
-  - uri-template=1.3.0=pyhd8ed1ab_0
-  - urllib3=2.2.3=pyhd8ed1ab_0
+  - uri-template=1.3.0=pyhd8ed1ab_1
+  - urllib3=2.2.3=pyhd8ed1ab_1
   - vc=14.3=ha32ba9b_23
   - vc14_runtime=14.42.34433=he29a5d6_23
   - vs2015_runtime=14.42.34433=hdffcdeb_23
-  - wcwidth=0.2.13=pyhd8ed1ab_0
-  - webcolors=24.8.0=pyhd8ed1ab_0
-  - webencodings=0.5.1=pyhd8ed1ab_2
-  - websocket-client=1.8.0=pyhd8ed1ab_0
-  - wheel=0.45.1=pyhd8ed1ab_0
+  - wcwidth=0.2.13=pyhd8ed1ab_1
+  - webcolors=24.11.1=pyhd8ed1ab_0
+  - webencodings=0.5.1=pyhd8ed1ab_3
+  - websocket-client=1.8.0=pyhd8ed1ab_1
+  - wheel=0.45.1=pyhd8ed1ab_1
   - widgetsnbextension=3.6.10=pyhd8ed1ab_0
-  - win_inet_pton=1.1.0=pyh7428d3b_7
+  - win_inet_pton=1.1.0=pyh7428d3b_8
   - winpty=0.4.3=4
   - xorg-libxau=1.0.11=hcd874cb_0
   - xorg-libxdmcp=1.1.3=hcd874cb_0
-  - xz=5.2.6=h8d14728_0
   - yaml=0.2.5=h8ffe710_2
   - zarr=2.14.2=pyhd8ed1ab_0
   - zeromq=4.3.5=ha9f60a1_7
-  - zict=3.0.0=pyhd8ed1ab_0
-  - zipp=3.21.0=pyhd8ed1ab_0
+  - zict=3.0.0=pyhd8ed1ab_1
+  - zipp=3.21.0=pyhd8ed1ab_1
   - zstandard=0.23.0=py310he5e10e1_1
   - zstd=1.5.6=h0ea2cb4_0
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@2a9d77a577fadf9c1256b0385e588e499f7f0dcf
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@d925c0b9b418a7c8e4c80e18a04fff640d455f43
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@a2a851feabdeacf58dcd9acc083086ffbe9f27fa
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@fe9db0338ad1f77427f1e5e64bf49356d0c14c18
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@59133afc4586f2924236098f5f001d402f162667
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@8cf9eb474930e3d901a8a66737d896c4fb63f4fb
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@ac05f803c7c86a475ddb9e5ba6ea8cabd1bc5924
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@644febfba1e81b1777a8ebf86744541c8e1fce09
 
 variables:
