--- a/environments/py-3.11-win-64.conda.lock.yml
+++ b/environments/py-3.11-win-64.conda.lock.yml
@@ -6,7 +6,7 @@ channels:
   - conda-forge
   - nodefaults
 dependencies:
-  - annotated-types=0.7.0=pyhd8ed1ab_0
+  - annotated-types=0.7.0=pyhd8ed1ab_1
   - asciitree=0.3.3=py_2
   - brotli=1.1.0=h2466b09_2
   - brotli-bin=1.1.0=h2466b09_2
@@ -17,30 +17,30 @@ dependencies:
   - cached_property=1.5.2=pyha770c72_1
   - certifi=2024.8.30=pyhd8ed1ab_0
   - cffi=1.17.1=py311he736701_0
-  - click=8.1.7=win_pyh7428d3b_0
+  - click=8.1.7=win_pyh7428d3b_1
   - cloudpickle=3.1.0=pyhd8ed1ab_1
-  - colorama=0.4.6=pyhd8ed1ab_0
+  - colorama=0.4.6=pyhd8ed1ab_1
   - contourpy=1.3.1=py311h3257749_0
-  - cycler=0.12.1=pyhd8ed1ab_0
+  - cycler=0.12.1=pyhd8ed1ab_1
   - cytoolz=1.0.0=py311he736701_1
   - dask-core=2024.6.2=pyhd8ed1ab_0
   - discretize=0.10.0=py311h12feb9d_1
   - distributed=2024.6.2=pyhd8ed1ab_0
   - empymod=2.2.2=pyhd8ed1ab_0
   - fasteners=0.17.3=pyhd8ed1ab_0
-  - fonttools=4.55.0=py311h5082efb_0
+  - fonttools=4.55.1=py311h5082efb_0
   - freetype=2.12.1=hdaf720e_2
   - fsspec=2022.11.0=pyhd8ed1ab_0
   - geoana=0.5.0=py311h12feb9d_4
-  - h2=4.1.0=pyhd8ed1ab_0
+  - h2=4.1.0=pyhd8ed1ab_1
   - h5py=3.12.1=nompi_py311h67016bb_102
-  - hdf5=1.14.3=nompi_h2b43c12_105
-  - hpack=4.0.0=pyh9f0ad1d_0
-  - hyperframe=6.0.1=pyhd8ed1ab_0
-  - importlib-metadata=8.5.0=pyha770c72_0
-  - importlib_metadata=8.5.0=hd8ed1ab_0
+  - hdf5=1.14.3=nompi_hd5d9e70_107
+  - hpack=4.0.0=pyhd8ed1ab_1
+  - hyperframe=6.0.1=pyhd8ed1ab_1
+  - importlib-metadata=8.5.0=pyha770c72_1
+  - importlib_metadata=8.5.0=hd8ed1ab_1
   - intel-openmp=2023.2.0=h57928b3_50497
-  - jinja2=3.1.4=pyhd8ed1ab_0
+  - jinja2=3.1.4=pyhd8ed1ab_1
   - joblib=1.4.2=pyhd8ed1ab_0
   - kiwisolver=1.4.7=py311h3257749_0
   - krb5=1.21.3=hdf4eb48_0
@@ -61,13 +61,14 @@ dependencies:
   - libiconv=1.17=hcfcfb64_2
   - libjpeg-turbo=3.0.0=hcfcfb64_1
   - liblapack=3.9.0=20_win64_mkl
+  - liblzma=5.6.3=h2466b09_1
   - libpng=1.6.44=h3ca93ac_0
   - libsqlite=3.47.0=h2466b09_1
   - libssh2=1.11.1=he619c9f_0
-  - libtiff=4.7.0=hfc51747_1
+  - libtiff=4.7.0=hdefb170_2
   - libwebp-base=1.4.0=hcfcfb64_0
   - libxcb=1.16=h013a479_1
-  - libxml2=2.13.5=h442d1da_0
+  - libxml2=2.13.5=he286e8c_1
   - libzlib=1.3.1=h2466b09_2
   - llvmlite=0.43.0=py311h7deaa30_1
   - locket=1.0.0=pyhd8ed1ab_0
@@ -76,7 +77,7 @@ dependencies:
   - m2w64-gcc-libs-core=5.3.0=7
   - m2w64-gmp=6.1.0=2
   - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-  - markupsafe=3.0.2=py311h5082efb_0
+  - markupsafe=3.0.2=py311h5082efb_1
   - matplotlib-base=3.8.4=py311h9b31f6e_2
   - mkl=2023.2.0=h6a75c08_50497
   - msgpack-python=1.1.0=py311h3257749_0
@@ -87,7 +88,7 @@ dependencies:
   - numpy=1.26.4=py311h0b4df5a_0
   - openjpeg=2.5.2=h3d672ee_0
   - openssl=3.4.0=h2466b09_0
-  - packaging=24.2=pyhff2d567_1
+  - packaging=24.2=pyhd8ed1ab_2
   - pandas=2.2.3=py311hcf9f919_1
   - partd=1.4.2=pyhd8ed1ab_0
   - pillow=10.3.0=py311h5592be9_1
@@ -95,16 +96,16 @@ dependencies:
   - psutil=6.1.0=py311he736701_0
   - pthread-stubs=0.4=hcd874cb_1001
   - pthreads-win32=2.9.1=h2466b09_4
-  - pycparser=2.22=pyhd8ed1ab_0
-  - pydantic=2.10.2=pyh3cfb1c2_0
+  - pycparser=2.22=pyh29332c3_1
+  - pydantic=2.10.3=pyh3cfb1c2_0
   - pydantic-core=2.27.1=py311h533ab2d_0
   - pydiso=0.1.2=py311h6340b4d_0
   - pymatsolver=0.2.0=ha770c72_3
   - pymatsolver-base=0.2.0=pyh44b312d_3
-  - pyparsing=3.2.0=pyhd8ed1ab_1
-  - pysocks=1.7.1=pyh0701188_6
-  - python=3.11.10=hce54a09_3_cpython
-  - python-dateutil=2.9.0.post0=pyhff2d567_0
+  - pyparsing=3.2.0=pyhd8ed1ab_2
+  - pysocks=1.7.1=pyh09c184e_7
+  - python=3.11.11=h3f84c4b_1_cpython
+  - python-dateutil=2.9.0.post0=pyhff2d567_1
   - python-tzdata=2023.4=pyhd8ed1ab_0
   - python_abi=3.11=5_cp311
   - pytz=2024.1=pyhd8ed1ab_0
@@ -112,7 +113,7 @@ dependencies:
   - scikit-learn=1.4.2=py311hdcb8d17_1
   - scipy=1.14.1=py311hf16d85f_1
   - setuptools=75.6.0=pyhff2d567_1
-  - six=1.16.0=pyh6c4a22f_0
+  - six=1.17.0=pyhd8ed1ab_0
   - sortedcontainers=2.4.0=pyhd8ed1ab_0
   - tbb=2021.12.0=hc790b64_4
   - tblib=3.0.0=pyhd8ed1ab_0
@@ -121,31 +122,30 @@ dependencies:
   - toolz=1.0.0=pyhd8ed1ab_0
   - tornado=6.4.2=py311he736701_0
   - tqdm=4.67.1=pyhd8ed1ab_0
-  - typing-extensions=4.12.2=hd8ed1ab_0
-  - typing_extensions=4.12.2=pyha770c72_0
+  - typing-extensions=4.12.2=hd8ed1ab_1
+  - typing_extensions=4.12.2=pyha770c72_1
   - tzdata=2024b=hc8b5060_0
   - ucrt=10.0.22621.0=h57928b3_1
   - unicodedata2=15.1.0=py311he736701_1
-  - urllib3=2.2.3=pyhd8ed1ab_0
+  - urllib3=2.2.3=pyhd8ed1ab_1
   - vc=14.3=ha32ba9b_23
   - vc14_runtime=14.42.34433=he29a5d6_23
   - vs2015_runtime=14.42.34433=hdffcdeb_23
-  - wheel=0.45.1=pyhd8ed1ab_0
-  - win_inet_pton=1.1.0=pyh7428d3b_7
+  - wheel=0.45.1=pyhd8ed1ab_1
+  - win_inet_pton=1.1.0=pyh7428d3b_8
   - xorg-libxau=1.0.11=hcd874cb_0
   - xorg-libxdmcp=1.1.3=hcd874cb_0
-  - xz=5.2.6=h8d14728_0
   - yaml=0.2.5=h8ffe710_2
   - zarr=2.14.2=pyhd8ed1ab_0
-  - zict=3.0.0=pyhd8ed1ab_0
-  - zipp=3.21.0=pyhd8ed1ab_0
+  - zict=3.0.0=pyhd8ed1ab_1
+  - zipp=3.21.0=pyhd8ed1ab_1
   - zstandard=0.23.0=py311h53056dc_1
   - zstd=1.5.6=h0ea2cb4_0
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@2a9d77a577fadf9c1256b0385e588e499f7f0dcf
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@d925c0b9b418a7c8e4c80e18a04fff640d455f43
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@a2a851feabdeacf58dcd9acc083086ffbe9f27fa
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@fe9db0338ad1f77427f1e5e64bf49356d0c14c18
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@59133afc4586f2924236098f5f001d402f162667
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@8cf9eb474930e3d901a8a66737d896c4fb63f4fb
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@ac05f803c7c86a475ddb9e5ba6ea8cabd1bc5924
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@644febfba1e81b1777a8ebf86744541c8e1fce09
 
 variables:
