--- a/environments/py-3.10-linux-64.conda.lock.yml
+++ b/environments/py-3.10-linux-64.conda.lock.yml
@@ -14,35 +14,35 @@ dependencies:
   - brotli-bin=1.1.0=hb9d3cd8_2
   - brotli-python=1.1.0=py310hf71b8c6_2
   - bzip2=1.0.8=h4bc722e_7
-  - c-ares=1.34.3=hb9d3cd8_1
-  - ca-certificates=2024.8.30=hbcca054_0
+  - c-ares=1.34.4=hb9d3cd8_0
+  - ca-certificates=2024.12.14=hbcca054_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
-  - certifi=2024.8.30=pyhd8ed1ab_0
+  - certifi=2024.12.14=pyhd8ed1ab_0
   - cffi=1.17.1=py310h8deb56e_0
-  - click=8.1.7=unix_pyh707e725_1
-  - cloudpickle=3.1.0=pyhd8ed1ab_1
+  - click=8.1.8=pyh707e725_0
+  - cloudpickle=3.1.0=pyhd8ed1ab_2
   - colorama=0.4.6=pyhd8ed1ab_1
   - contourpy=1.3.1=py310h3788b33_0
   - cycler=0.12.1=pyhd8ed1ab_1
-  - cytoolz=1.0.0=py310ha75aee5_1
+  - cytoolz=1.0.1=py310ha75aee5_0
   - dask-core=2024.6.2=pyhd8ed1ab_0
   - discretize=0.10.0=py310hcb52e73_1
   - distributed=2024.6.2=pyhd8ed1ab_0
   - empymod=2.2.2=pyhd8ed1ab_0
-  - fasteners=0.17.3=pyhd8ed1ab_0
-  - fonttools=4.55.3=py310h89163eb_0
+  - fasteners=0.19=pyhd8ed1ab_1
+  - fonttools=4.55.3=py310h89163eb_1
   - freetype=2.12.1=h267a509_2
   - fsspec=2022.11.0=pyhd8ed1ab_0
   - geoana=0.5.0=py310hcb52e73_4
   - h2=4.1.0=pyhd8ed1ab_1
-  - h5py=3.12.1=nompi_py310h60e0fe6_102
-  - hdf5=1.14.3=nompi_h2d575fe_108
+  - h5py=3.12.1=nompi_py310hacc6608_103
+  - hdf5=1.14.4=nompi_h2d575fe_105
   - hpack=4.0.0=pyhd8ed1ab_1
   - hyperframe=6.0.1=pyhd8ed1ab_1
   - importlib-metadata=8.5.0=pyha770c72_1
   - importlib_metadata=8.5.0=hd8ed1ab_1
-  - jinja2=3.1.4=pyhd8ed1ab_1
+  - jinja2=3.1.5=pyhd8ed1ab_0
   - joblib=1.4.2=pyhd8ed1ab_1
   - keyutils=1.6.1=h166bdaf_0
   - kiwisolver=1.4.7=py310h3788b33_0
@@ -56,10 +56,10 @@ dependencies:
   - libbrotlidec=1.1.0=hb9d3cd8_2
   - libbrotlienc=1.1.0=hb9d3cd8_2
   - libcblas=3.9.0=20_linux64_mkl
-  - libcurl=8.10.1=hbbe4b11_0
-  - libdeflate=1.22=hb9d3cd8_0
-  - libdlf=0.3.0=pyhd8ed1ab_0
-  - libedit=3.1.20191231=he28a2e2_2
+  - libcurl=8.11.1=h332b0f4_0
+  - libdeflate=1.23=h4ddbbb0_0
+  - libdlf=0.3.0=pyhd8ed1ab_1
+  - libedit=3.1.20240808=pl5321h7949ede_0
   - libev=4.33=hd590300_2
   - libffi=3.4.2=h7f98852_5
   - libgcc=14.2.0=h77fa898_1
@@ -74,19 +74,19 @@ dependencies:
   - liblzma=5.6.3=hb9d3cd8_1
   - libnghttp2=1.64.0=h161d5f1_0
   - libnsl=2.0.1=hd590300_0
-  - libpng=1.6.44=hadc24fc_0
+  - libpng=1.6.45=h943b412_0
   - libsqlite=3.47.2=hee588c1_0
   - libssh2=1.11.1=hf672d98_0
   - libstdcxx=14.2.0=hc0a3c3a_1
   - libstdcxx-ng=14.2.0=h4852527_1
-  - libtiff=4.7.0=hc4654cb_2
+  - libtiff=4.7.0=hd9ff511_3
   - libuuid=2.38.1=h0b41bf4_0
-  - libwebp-base=1.4.0=hd590300_0
+  - libwebp-base=1.5.0=h851e524_0
   - libxcb=1.17.0=h8a09558_0
   - libxcrypt=4.4.36=hd590300_1
   - libxml2=2.13.5=h0d44e9d_1
   - libzlib=1.3.1=hb9d3cd8_2
-  - llvm-openmp=19.1.5=h024ca30_0
+  - llvm-openmp=19.1.6=h024ca30_0
   - llvmlite=0.43.0=py310h1a6248f_1
   - locket=1.0.0=pyhd8ed1ab_0
   - markupsafe=3.0.2=py310h89163eb_1
@@ -99,21 +99,21 @@ dependencies:
   - numcodecs=0.13.1=py310h5eaa309_0
   - numpy=1.26.4=py310hb13e2d6_0
   - openjpeg=2.5.3=h5fbd93e_0
-  - openssl=3.4.0=hb9d3cd8_0
+  - openssl=3.4.0=h7b32b05_1
   - packaging=24.2=pyhd8ed1ab_2
   - pandas=2.2.3=py310h5eaa309_1
   - partd=1.4.2=pyhd8ed1ab_0
   - pillow=10.3.0=py310hebfe307_1
-  - pip=24.3.1=pyh8b19718_0
-  - psutil=6.1.0=py310ha75aee5_0
+  - pip=24.3.1=pyh8b19718_2
+  - psutil=6.1.1=py310ha75aee5_0
   - pthread-stubs=0.4=hb9d3cd8_1002
   - pycparser=2.22=pyh29332c3_1
-  - pydantic=2.10.3=pyh3cfb1c2_0
-  - pydantic-core=2.27.1=py310h505e2c1_0
+  - pydantic=2.10.5=pyh3cfb1c2_0
+  - pydantic-core=2.27.2=py310h505e2c1_0
   - pydiso=0.1.2=py310h7b68af5_0
   - pymatsolver=0.2.0=ha770c72_3
   - pymatsolver-base=0.2.0=pyh44b312d_3
-  - pyparsing=3.2.0=pyhd8ed1ab_2
+  - pyparsing=3.2.1=pyhd8ed1ab_0
   - pysocks=1.7.1=pyha55dd90_7
   - python=3.10.16=he725a3c_1_cpython
   - python-dateutil=2.9.0.post0=pyhff2d567_1
@@ -124,7 +124,7 @@ dependencies:
   - readline=8.2=h8228510_1
   - scikit-learn=1.4.2=py310h981052a_1
   - scipy=1.14.1=py310hfcf56fc_2
-  - setuptools=75.6.0=pyhff2d567_1
+  - setuptools=75.8.0=pyhff2d567_0
   - six=1.17.0=pyhd8ed1ab_0
   - sortedcontainers=2.4.0=pyhd8ed1ab_0
   - tbb=2021.12.0=h84d6215_4
@@ -133,14 +133,14 @@ dependencies:
   - tk=8.6.13=noxft_h4845f30_101
   - toolz=1.0.0=pyhd8ed1ab_1
   - tornado=6.4.2=py310ha75aee5_0
-  - tqdm=4.67.1=pyhd8ed1ab_0
+  - tqdm=4.67.1=pyhd8ed1ab_1
   - typing-extensions=4.12.2=hd8ed1ab_1
   - typing_extensions=4.12.2=pyha770c72_1
   - tzdata=2024b=hc8b5060_0
   - unicodedata2=15.1.0=py310ha75aee5_1
-  - urllib3=2.2.3=pyhd8ed1ab_1
+  - urllib3=2.3.0=pyhd8ed1ab_0
   - wheel=0.45.1=pyhd8ed1ab_1
-  - xorg-libxau=1.0.11=hb9d3cd8_1
+  - xorg-libxau=1.0.12=hb9d3cd8_0
   - xorg-libxdmcp=1.1.5=hb9d3cd8_0
   - yaml=0.2.5=h7f98852_2
   - zarr=2.14.2=pyhd8ed1ab_0
@@ -149,11 +149,11 @@ dependencies:
   - zstandard=0.23.0=py310ha39cb0e_1
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@ee7fbd119f62a71ad1eb7380421f2cccb9e52477
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@fe9db0338ad1f77427f1e5e64bf49356d0c14c18
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@007da1d142502378a4da9b7760c6b178986368a3
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@abdd3bd275deba6a92d741674053a9aabcccbeba
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@59133afc4586f2924236098f5f001d402f162667
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@e2192866e360874ba072231c677b6f0daf5154fd
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@644febfba1e81b1777a8ebf86744541c8e1fce09
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@065db6be99def82cb5476cdeca78afd2ea5a3a43
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@cf2ee8d60e69b589b7124d1ad8cbb9649b68c09d
 
 variables:
   KMP_WARNINGS: 0
