--- a/environments/py-3.10-win-64.conda.lock.yml
+++ b/environments/py-3.10-win-64.conda.lock.yml
@@ -12,35 +12,35 @@ dependencies:
   - brotli-bin=1.1.0=h2466b09_2
   - brotli-python=1.1.0=py310h9e98ed7_2
   - bzip2=1.0.8=h2466b09_7
-  - ca-certificates=2024.8.30=h56e8100_0
+  - ca-certificates=2024.12.14=h56e8100_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
-  - certifi=2024.8.30=pyhd8ed1ab_0
+  - certifi=2024.12.14=pyhd8ed1ab_0
   - cffi=1.17.1=py310ha8f682b_0
-  - click=8.1.7=win_pyh7428d3b_1
-  - cloudpickle=3.1.0=pyhd8ed1ab_1
+  - click=8.1.8=pyh7428d3b_0
+  - cloudpickle=3.1.0=pyhd8ed1ab_2
   - colorama=0.4.6=pyhd8ed1ab_1
   - contourpy=1.3.1=py310hc19bc0b_0
   - cycler=0.12.1=pyhd8ed1ab_1
-  - cytoolz=1.0.0=py310ha8f682b_1
+  - cytoolz=1.0.1=py310ha8f682b_0
   - dask-core=2024.6.2=pyhd8ed1ab_0
   - discretize=0.10.0=py310h4856b71_1
   - distributed=2024.6.2=pyhd8ed1ab_0
   - empymod=2.2.2=pyhd8ed1ab_0
-  - fasteners=0.17.3=pyhd8ed1ab_0
-  - fonttools=4.55.3=py310h38315fa_0
+  - fasteners=0.19=pyhd8ed1ab_1
+  - fonttools=4.55.3=py310h38315fa_1
   - freetype=2.12.1=hdaf720e_2
   - fsspec=2022.11.0=pyhd8ed1ab_0
   - geoana=0.5.0=py310h4856b71_4
   - h2=4.1.0=pyhd8ed1ab_1
-  - h5py=3.12.1=nompi_py310h2b0be38_102
-  - hdf5=1.14.3=nompi_hd5d9e70_108
+  - h5py=3.12.1=nompi_py310h972678a_103
+  - hdf5=1.14.4=nompi_hd5d9e70_105
   - hpack=4.0.0=pyhd8ed1ab_1
   - hyperframe=6.0.1=pyhd8ed1ab_1
   - importlib-metadata=8.5.0=pyha770c72_1
   - importlib_metadata=8.5.0=hd8ed1ab_1
   - intel-openmp=2023.2.0=h57928b3_50497
-  - jinja2=3.1.4=pyhd8ed1ab_1
+  - jinja2=3.1.5=pyhd8ed1ab_0
   - joblib=1.4.2=pyhd8ed1ab_1
   - kiwisolver=1.4.7=py310hc19bc0b_0
   - krb5=1.21.3=hdf4eb48_0
@@ -52,20 +52,20 @@ dependencies:
   - libbrotlidec=1.1.0=h2466b09_2
   - libbrotlienc=1.1.0=h2466b09_2
   - libcblas=3.9.0=20_win64_mkl
-  - libcurl=8.10.1=h1ee3ff0_0
-  - libdeflate=1.22=h2466b09_0
-  - libdlf=0.3.0=pyhd8ed1ab_0
+  - libcurl=8.11.1=h88aaa65_0
+  - libdeflate=1.23=h9062f6e_0
+  - libdlf=0.3.0=pyhd8ed1ab_1
   - libffi=3.4.2=h8ffe710_5
   - libhwloc=2.11.1=default_h8125262_1000
   - libiconv=1.17=hcfcfb64_2
   - libjpeg-turbo=3.0.0=hcfcfb64_1
   - liblapack=3.9.0=20_win64_mkl
   - liblzma=5.6.3=h2466b09_1
-  - libpng=1.6.44=h3ca93ac_0
+  - libpng=1.6.45=had7236b_0
   - libsqlite=3.47.2=h67fdade_0
   - libssh2=1.11.1=he619c9f_0
-  - libtiff=4.7.0=hdefb170_2
-  - libwebp-base=1.4.0=hcfcfb64_0
+  - libtiff=4.7.0=h797046b_3
+  - libwebp-base=1.5.0=h3b0e114_0
   - libxcb=1.16=h013a479_1
   - libxml2=2.13.5=he286e8c_1
   - libzlib=1.3.1=h2466b09_2
@@ -86,22 +86,22 @@ dependencies:
   - numcodecs=0.13.1=py310hb4db72f_0
   - numpy=1.26.4=py310hf667824_0
   - openjpeg=2.5.3=h4d64b90_0
-  - openssl=3.4.0=h2466b09_0
+  - openssl=3.4.0=ha4e3fda_1
   - packaging=24.2=pyhd8ed1ab_2
   - pandas=2.2.3=py310hb4db72f_1
   - partd=1.4.2=pyhd8ed1ab_0
   - pillow=10.3.0=py310h3e38d90_1
-  - pip=24.3.1=pyh8b19718_0
-  - psutil=6.1.0=py310ha8f682b_0
+  - pip=24.3.1=pyh8b19718_2
+  - psutil=6.1.1=py310ha8f682b_0
   - pthread-stubs=0.4=hcd874cb_1001
   - pthreads-win32=2.9.1=h2466b09_4
   - pycparser=2.22=pyh29332c3_1
-  - pydantic=2.10.3=pyh3cfb1c2_0
-  - pydantic-core=2.27.1=py310hc226416_0
+  - pydantic=2.10.5=pyh3cfb1c2_0
+  - pydantic-core=2.27.2=py310hc226416_0
   - pydiso=0.1.2=py310h5da8fee_0
   - pymatsolver=0.2.0=ha770c72_3
   - pymatsolver-base=0.2.0=pyh44b312d_3
-  - pyparsing=3.2.0=pyhd8ed1ab_2
+  - pyparsing=3.2.1=pyhd8ed1ab_0
   - pysocks=1.7.1=pyh09c184e_7
   - python=3.10.16=h37870fc_1_cpython
   - python-dateutil=2.9.0.post0=pyhff2d567_1
@@ -111,7 +111,7 @@ dependencies:
   - pyyaml=6.0.2=py310ha8f682b_1
   - scikit-learn=1.4.2=py310hf2a6c47_1
   - scipy=1.14.1=py310hbd0dde3_2
-  - setuptools=75.6.0=pyhff2d567_1
+  - setuptools=75.8.0=pyhff2d567_0
   - six=1.17.0=pyhd8ed1ab_0
   - sortedcontainers=2.4.0=pyhd8ed1ab_0
   - tbb=2021.12.0=hc790b64_4
@@ -120,13 +120,13 @@ dependencies:
   - tk=8.6.13=h5226925_1
   - toolz=1.0.0=pyhd8ed1ab_1
   - tornado=6.4.2=py310ha8f682b_0
-  - tqdm=4.67.1=pyhd8ed1ab_0
+  - tqdm=4.67.1=pyhd8ed1ab_1
   - typing-extensions=4.12.2=hd8ed1ab_1
   - typing_extensions=4.12.2=pyha770c72_1
   - tzdata=2024b=hc8b5060_0
   - ucrt=10.0.22621.0=h57928b3_1
   - unicodedata2=15.1.0=py310ha8f682b_1
-  - urllib3=2.2.3=pyhd8ed1ab_1
+  - urllib3=2.3.0=pyhd8ed1ab_0
   - vc=14.3=ha32ba9b_23
   - vc14_runtime=14.42.34433=he29a5d6_23
   - vs2015_runtime=14.42.34433=hdffcdeb_23
@@ -141,11 +141,11 @@ dependencies:
   - zstandard=0.23.0=py310he5e10e1_1
   - zstd=1.5.6=h0ea2cb4_0
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@ee7fbd119f62a71ad1eb7380421f2cccb9e52477
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@fe9db0338ad1f77427f1e5e64bf49356d0c14c18
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@007da1d142502378a4da9b7760c6b178986368a3
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@abdd3bd275deba6a92d741674053a9aabcccbeba
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@59133afc4586f2924236098f5f001d402f162667
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@e2192866e360874ba072231c677b6f0daf5154fd
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@644febfba1e81b1777a8ebf86744541c8e1fce09
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@065db6be99def82cb5476cdeca78afd2ea5a3a43
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@cf2ee8d60e69b589b7124d1ad8cbb9649b68c09d
 
 variables:
   KMP_WARNINGS: 0
